# Agentic-Travel-Agency

./: .gitignore  README.md  hardhat.config.js  main.py  package-lock.json  package.json  pyproject.toml  test_mcp.py
agents/business_travel/: __init__.py  __main__.py  agent.py  demo.py  executor.py
agents/customer/: __main__.py  agent.py  executor.py
agents/flight/: __main__.py  agent.py  executor.py
agents/hotel/: __main__.py  agent.py  executor.py
agents/mobility/: __main__.py  agent.py  executor.py
agents/orchestrator/: __main__.py  agent.py  executor.py
agents/rail/: __main__.py  agent.py  executor.py
app/cmd/: cmd.py
contracts/: BusinessAgentRegistry.sol  BusinessTravelBooking.sol  BusinessTravelPolicy.sol
deployments/: sepolia.json  sepolia_bookings.json
docs/: architecture.md  architecture_diagram.md  demo_results.md  thesis_mapping.md
mcp_servers/: attractions_server.py  flight_server.py  hotel_server.py  mobility_server.py  rail_server.py  weather_server.py
ops/: README.md
ops/booking/: check_and_complete_booking.py  complete_test_booking.js  create_test_booking.js
ops/demo/: check_business_travel_demo.ps1  start_business_travel_demo.ps1
ops/deployments/: sepolia.json
scripts/: check_and_complete_booking.py  complete_test_booking.js  deploy_business_agent_registry.js  discover_business_agents.js  discover_business_provider_agents.js  register_business_provider_agents.js  start_business_travel_demo.ps1  verify_business_travel.py  verify_business_travel_unit.py  verify_provider_agents.py
test/: BusinessTravelPolicy.test.js
(+32 files in other folders)
